fix closed menu showing on mobile glitch

--- a/public/css/sass/_base.scss
+++ b/public/css/sass/_base.scss
@@ -576,11 +576,11 @@ $cubic: cubic-bezier(.64,.09,.08,1);
 	background: rgba(black, .9);
 	backdrop-filter: blur(5px);
 	-webkit-backdrop-filter: blur(5px);
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: 9998;
     overflow: hidden;
-    transform: translateY(-150%);
+    transform: translateY(-120%);
 	-webkit-transition: cubic-bezier(0.19, 1, 0.22, 1) .8s transform;
     -moz-transition: cubic-bezier(0.19, 1, 0.22, 1) .8s transform;
     transition: cubic-bezier(0.19, 1, 0.22, 1) .8s transform;
@@ -588,10 +588,10 @@ $cubic: cubic-bezier(.64,.09,.08,1);
 
 .site-nav-wrap {
 	margin-bottom: 3vw;
-	transform: translateY(-150%);
-	-webkit-transition: cubic-bezier(0.19, 1, 0.22, 1) 1.2s transform;
-	-moz-transition: cubic-bezier(0.19, 1, 0.22, 1) 1.2s transform;
-	transition: cubic-bezier(0.19, 1, 0.22, 1) 1.2s transform;
+	transform: translateY(-120%);
+	-webkit-transition: cubic-bezier(.16,.99,.21,1) 1.4s transform;
+	-moz-transition: cubic-bezier(.16,.99,.21,1) 1.4s transform;
+	transition: cubic-bezier(.16,.99,.21,1) 1.4s transform;
 
 	h3 {
 		margin-bottom: 1vw;
